prevent nav elements from spilling onto second line by adjusting padding for .w-nav-link

--- a/css/webflow.css
+++ b/css/webflow.css
@@ -1584,7 +1584,7 @@ textarea.w-select {
   vertical-align: top;
   text-decoration: none;
   color: #222222;
-  padding: 20px;
+  padding: 19px;
   text-align: left;
   margin-left: auto;
   margin-right: auto;
